Initial commit: IWB 5.5.1.x Russian version

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,11 @@ RemoteDebug-xk/
 # *.pdf
 
 # ============================================
+# 忽略嵌套 Git 仓库
+# ============================================
+IWB/.git/
+
+# ============================================
 # 忽略大于50M的特定文件
 # ============================================
 # 如果发现特定的大文件，在这里添加路径
