--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ RemoteDebug-xk/
 # ============================================
 # 忽略嵌套 Git 仓库
 # ============================================
-IWB/.git/
+#IWB/.git/
 
 # ============================================
 # 忽略大于50M的特定文件
